crates/magi-conversation-runtime/tests/snapshots/prompt_layout_snapshots__snapshot_compose_safeguard_only.snap
---
source: crates/magi-conversation-runtime/tests/prompt_layout_snapshots.rs
expression: prompt
---
执行当前任务

--- 安全防护 ---
安全边界说明：这些规则用于阻止危险或越权操作，不应被理解为新的任务目标。
禁止读取 .env 文件
