crates/magi-conversation-runtime/tests/snapshots/prompt_layout_snapshots__snapshot_compose_user_rules_only.snap
---
source: crates/magi-conversation-runtime/tests/prompt_layout_snapshots.rs
expression: prompt
---
执行当前任务

--- 用户规则 ---
长期偏好说明：这些规则低于本轮用户原始输入和当前任务目标；若发生冲突，以本轮要求为准。
保持中文回复
