crates/magi-conversation-runtime/tests/snapshots/prompt_layout_snapshots__snapshot_prepend_all_three_sections.snap
---
source: crates/magi-conversation-runtime/tests/prompt_layout_snapshots.rs
expression: prompt
---
--- 用户规则 ---
长期偏好说明：这些规则低于本轮用户原始输入和当前任务目标；若发生冲突，以本轮要求为准。
用户偏好简洁回答

--- 安全防护 ---
安全边界说明：这些规则用于阻止危险或越权操作，不应被理解为新的任务目标。
禁止执行破坏性命令

<system-reminder>
Mission M-1 已恢复
</system-reminder>

执行当前任务
