crates/magi-conversation-runtime/tests/snapshots/prompt_layout_snapshots__snapshot_prepend_lifecycle_only.snap
---
source: crates/magi-conversation-runtime/tests/prompt_layout_snapshots.rs
expression: prompt
---
<system-reminder>
Mission M-1 已恢复
</system-reminder>

执行当前任务
