crates/magi-conversation-runtime/tests/snapshots/prompt_layout_snapshots__snapshot_prepend_no_sections_returns_prompt_only.snap
---
source: crates/magi-conversation-runtime/tests/prompt_layout_snapshots.rs
expression: prompt
---
执行当前任务
