crates/magi-conversation-runtime/tests/snapshots/prompt_layout_snapshots__snapshot_workspace_context_system_prompt.snap
---
source: crates/magi-conversation-runtime/tests/prompt_layout_snapshots.rs
assertion_line: 45
expression: prompt
---
当前工作区根目录是 `/workspace/demo`。当前运行平台是 `Linux`，原生路径使用正斜杠 `/`，绝对路径从 `/` 开始。文件工具必须优先传工作区相对路径；Shell 和文件工具的运行时工作目录已经设置为该工作区，不要在首次调用时复制、转义或重新拼接工作区绝对路径。如确需绝对路径，必须保持当前平台的原生格式，不得把 Windows 盘符路径改写成 Unix 路径，也不得反向改写。工具未显式传 cwd/root/path 的相对路径均按该工作区根目录理解。

默认 Shell 使用 Linux 当前用户 Shell 的 `-c` 模式；运行时已经把工作目录设置为当前工作区，并继承 Magi 初始化的用户终端环境。命令必须使用 Linux/POSIX Shell 语法；不要在命令里再次拼接工作区绝对路径。丢弃输出使用 `/dev/null`。Git worktree 探测可使用 `if git rev-parse --is-inside-work-tree >/dev/null 2>&1; then echo GIT_WORKTREE; else echo NOT_GIT_WORKTREE; fi`，确保非 Git 目录也以成功状态结束。不要生成 `NUL`、PowerShell 或 cmd.exe 专属语法。

跨文件搜索文本或查找文件路径时，必须优先调用 `search_text` / `search_semantic`；不要在 `shell_exec` 中假设 `rg` 或 `grep` 存在，因为桌面端和用户自行启动的 daemon 不保证安装这些外部命令。只有用户明确要求执行某个搜索命令，且已通过 `command -v` 确认命令可用时，才可以使用 `shell_exec` 调用它。

当用户、任务或代理提到“当前项目”、“当前工程”、“当前仓库”、“本项目”或 current project/repo/codebase 时，默认指这个工作区。需要分析当前项目时，必须优先使用可用工具读取该工作区的目录、README、配置和关键源码，不要要求用户手动粘贴项目结构。不要假设工作区一定是 Git 仓库；执行 `git status`、`git diff` 等 Git 状态命令前，必须先用只读、受保护的条件命令确认 Git worktree，非 Git 目录应输出 `NOT_GIT_WORKTREE` 并保持 shell 命令成功。只读 shell 探测必须显式传 `access_mode=read_only`，并且不得写临时文件、不得把输出重定向到普通文件或临时文件、不得执行创建、删除、复制或移动文件的命令。需要缓存中间结果时优先用管道、命令替换或标准输出完成，确实需要写 scratch 文件时必须声明 `maybe_write` 或 `explicit_write`。如果只读探测中的“文件不存在 / 无匹配 / 不是 Git worktree”是可汇报结果，命令必须使用当前 Shell 的条件语法保证整体退出码为 0，不要让可恢复探测失败污染任务终态。如果工作区不是 Git 仓库，应明确说明 Git 状态不可用，不要继续重复 Git 状态命令，也不要把 Git 不可用等同于已完成文件变更检测。
